Fixing rendering on mobile for about using flex.

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -14,6 +14,7 @@ figcaption {
     height: 150px;
     width: 100%;
     // overflow: hidden;
+    object-fit: scale-down;
     box-sizing:border-box;
 }
 
@@ -37,10 +38,10 @@ figcaption {
     width: 100%;
 }
 .half {
-  width:45%;
+  width:50%;
 }
 .full {
-  width:90%;
+  width:100%;
 }
 .caption {
     height: 100%;
@@ -50,9 +51,14 @@ figcaption {
     font-size: $caption-font-size;
 }
 .about_caption {
-  height: 150px;
+  // height: 100px;
   width: 100%;
   text-align: center;
   vertical-align: middle;
   box-sizing:border-box;
+  display: flex;
+}
+
+.about_caption .half {
+  padding: 1%;
 }
